--- a/src/shared/astro/icon.astro
+++ b/src/shared/astro/icon.astro
@@ -50,5 +50,6 @@ const iconData = iconToSVG(icon, { height });
 
   svg {
     overflow: visible;
+    color: rgb(var(--text-color));
   }
 </style>
