--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -6,6 +6,7 @@ import Card from "@components/card-index/card.astro";
 interface Props {
   target: string;
   include?: string[];
+  columns?: number;
 }
 
 const tree = Astro.locals.tree;
@@ -14,6 +15,7 @@ const data = Astro.locals.collections.pages;
 const {
   target = "/",
   include = ["title", "description", "thumbnail", "link"],
+  columns,
 } = Astro.props;
 
 const targetFragments = target?.split("/").filter((frg) => frg !== "");
@@ -41,13 +43,15 @@ const slugs =
   }, new Set());
 const cards = slugs && data.filter((node) => slugs.has(node.slug));
 
+cards?.sort((a, b) => a.data.order - b.data.order); // Sort in ascending order
+
 // const cards = Object.values(cursor?.children).map((node) => {
 //   return node?.slug !== undefined && node.slug in data ? data[node.slug]
 // });
 ---
 
 <Section component="card-index">
-  <div class="card-index">
+  <div class="card-index" style={{ "--columns": columns }}>
     {
       cards &&
         cards.map((card) => {
@@ -59,8 +63,8 @@ const cards = slugs && data.filter((node) => slugs.has(node.slug));
 
 <style lang="scss">
   .card-index {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
   }
 </style>
