Update card index bookshop definitions

--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -67,9 +67,10 @@ if (!ENV_BOOKSHOP_LIVE) {
       body: "",
       collection: "pages",
       data: {
-        title: "Bookshop Placeholder",
+        title: "Card Index Placeholder",
         description:
           "This is a placeholder item for previewing card indexes in the live editor. ",
+        categories: ["placeholder"],
         thumbnail: undefined,
         status: "online",
         order: 4,
