--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -106,7 +106,7 @@ if (!ENV_BOOKSHOP_LIVE) {
         )
       }
       {
-        pageSize && (
+        !!pageSize && (
           <div class="card-pagination" data-page-size={pageSize} data-page={0}>
             <button data-action="0">
               <Icon name="fa6-solid:backward-step" height="1.5rem" />
