--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -60,27 +60,26 @@ if (!ENV_BOOKSHOP_LIVE) {
 
   cards?.sort((a, b) => a.data.order - b.data.order); // Sort in ascending order
 } else {
-  cards = [
-    {
-      id: "bookshopPlaceholder",
-      slug: "bookshopPlaceholder",
-      body: "",
-      collection: "pages",
-      data: {
-        title: "Card Index Placeholder",
-        description:
-          "This is a placeholder item for previewing card indexes in the live editor. ",
-        categories: ["placeholder"],
-        thumbnail: undefined,
-        status: "online",
-        order: 4,
-        content_blocks: [],
-        show_global_header: true,
-        show_global_footer: true,
-      },
-      render: undefined,
+  // Create placeholder cards for the live editor
+  cards = new Array(pageSize || columns * 2).fill({
+    id: "bookshopPlaceholder",
+    slug: "bookshopPlaceholder",
+    body: "",
+    collection: "pages",
+    data: {
+      title: "Card Index Placeholder",
+      description:
+        "This is a placeholder item for previewing card indexes in the live editor. ",
+      categories: ["placeholder"],
+      thumbnail: undefined,
+      status: "online",
+      order: 4,
+      content_blocks: [],
+      show_global_header: true,
+      show_global_footer: true,
     },
-  ];
+    render: undefined,
+  });
 }
 
 // const cards = Object.values(cursor?.children).map((node) => {
