--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -2,6 +2,7 @@
 import Section from "@layouts/Section.astro";
 import Card from "@components/card-index/card.astro";
 import Icon from "@shared/icon.astro";
+import PlaceholderImage from "@components/card-index/card-index-placeholder.png";
 // import { type TreeNode } from "@mws-astro/middleware";
 
 interface Props {
@@ -74,7 +75,7 @@ if (!ENV_BOOKSHOP_LIVE) {
       description:
         "This is a placeholder item for previewing card indexes in the live editor. ",
       categories: ["placeholder"],
-      thumbnail: undefined,
+      thumbnail: PlaceholderImage,
       status: "online",
       order: 4,
       content_blocks: [],
